--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 695px) {
 
     body{
 
@@ -21,15 +21,9 @@
         font-size: 30px;
 
     }
-
-    .img {
-
-        width: 100%;
-
-    }
 }
 
-@media screen and (min-width: 500px) {
+@media screen and (min-width: 695px) {
 
     body{
 
@@ -52,19 +46,13 @@
         font-size: 45px;
 
     }
-
-    .img {
-
-        width: 100%;
-
-    }
 }
 
-@media screen and (min-width: 900px) {
+@media screen and (min-width: 1008px) {
 
     body{
 
-        background-color: rgb(46, 46, 46);
+        background-color: rgb(10, 10, 10);
 
     }
 
@@ -74,6 +62,12 @@
         text-align: center;
         font-size: 60px;
 
+        border-color: rgb(157, 19, 175);
+        border-width: 8px;
+        border-style: inset;
+        border-radius: 5%;
+        margin-inline: 35%;
+        padding-block: 5%;
     }
 
     .part2 {
@@ -82,11 +76,11 @@
         text-align: center;
         font-size: 55px;
 
-    }
-
-    .img {
-
-        width: 100%;
-
+        border-color: rgb(9, 124, 255);
+        border-width: 8px;
+        border-style: inset;
+        border-radius: 5%;
+        margin-inline: 25%;
+        padding-block: 2%;
     }
 }
